--- a/redox.html
+++ b/redox.html
@@ -18,12 +18,13 @@
     </div>
   </nav>
   <div class="row tibet">
-    <div class="col-lg-5 text">
+    <div class="col-lg-6 col-md-3 col-sm-12 text">
       <h1>VR headsets</h1><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut luctus ac sapien eu fermentum. Fusce ac sodales quam. Nam sit amet commodo.</p>
+      <br>
       <button type="button" name="button">READ MORE</button>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-6 col-md-3 col-sm-12" >
       <img src="first.webp" alt="" class="first_page">
     </div>
   </div>
