--- a/redox.html
+++ b/redox.html
@@ -16,6 +16,11 @@
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1 navuy">LOGO</span>
     </div>
+    <label class="switch">
+  <input type="checkbox">
+  <span class="slider round"></span>
+</label>
+
   </nav>
   <div class="row tibet">
     <div class="col-lg-6 col-md-3 col-sm-12 text">
@@ -26,27 +31,28 @@
     </div>
     <div class="col-lg-6 col-md-3 col-sm-12" >
       <img src="first.webp" alt="" class="first_page">
+      <div class="borderTopHome"></div>
     </div>
   </div>
 </section>
 <section id="cards">
   <div class="cards">
     <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="https://image.freepik.com/free-vector/web-developers-courses-computer-programming-web-design-script-coding-study-computer-science-student-learning-interface-structure-components_335657-2542.jpg?w=740" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div><div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="https://image.freepik.com/free-vector/designer-concept-illustration_114360-676.jpg?w=740" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div><div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="https://image.freepik.com/free-vector/web-developers-courses-computer-programming-web-design-script-coding-study-computer-science-student-learning-interface-structure-components_335657-2542.jpg?w=740" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -55,5 +61,7 @@
 </div>
   </div>
 </section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="redox.js" charset="utf-8"></script>
   </body>
 </html>
